publish: add ddpg
generated from commit 8c78645b06fd5d2ffb94f8ef7b3ef5bdd34ced6d

--- a/index.html
+++ b/index.html
@@ -1088,7 +1088,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/91">12.98525</a></td>
 <td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/123">13.90989</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1099,7 +1099,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left">-</td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/107">18.91624</a></td>
 <td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/124">30.57067</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
 </tr>
@@ -1145,7 +1145,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/125">-0.2984732</a></td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>LunarLander-v2</strong></td>
@@ -1389,7 +1389,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left"><a href="https://arxiv.org/abs/1509.02971">DDPG (Deep-DPG, aka actor-critic with target networks)</a></td>
-<td style="text-align: left">in-progress</td>
+<td style="text-align: left">✓</td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
@@ -1436,17 +1436,17 @@ When developing a new algorithm, use the session graph to immediately see how th
 </thead><tbody>
 <tr>
 <td style="text-align: left">CartPole-v0</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/91">12.98525</a></td>
-<td style="text-align: left">9</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/123">13.90989</a></td>
+<td style="text-align: left">3</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left">offpol_sarsa</td>
+<td style="text-align: left">cartpole_ac_softmax</td>
 </tr>
 <tr>
 <td style="text-align: left">CartPole-v1</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/107">18.91624</a></td>
-<td style="text-align: left">19</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/124">30.57067</a></td>
+<td style="text-align: left">3</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left">offpol_sarsa_v1</td>
+<td style="text-align: left">cartpole_v1_ac_softmax</td>
 </tr>
 <tr>
 <td style="text-align: left">Acrobot-v1</td>
@@ -1471,10 +1471,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">Pendulum-v0</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/125">-0.2984732</a></td>
+<td style="text-align: left">-150.8091</td>
+<td style="text-align: left">kengz/lgraesser</td>
+<td style="text-align: left">pendulum_ddpg</td>
 </tr>
 </tbody></table>
 
