--- a/index.html
+++ b/index.html
@@ -1846,7 +1846,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <img src="images/metric_3.png" alt="Metric 3" />
 <img src="images/metric_4.png" alt="Metric 4" /></p>
 
-          <h1 id="algorithms"><a name="algorithms"></a>Algorithms</h1>
+          <h1 id="algorithms-theory"><a name="algorithms"></a>Algorithms (Theory)</h1>
 
 <p>The currently implemented algorithms combine deep neural networks with a number of classic reinforcement learning algorithms. These are just a starting point. Please invent your own! </p>
 
@@ -2058,7 +2058,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <li><a href="https://arxiv.org/abs/1312.5602">Playing Atari with Deep Reinforcement Learning, 2013</a>: The famous paper from DeepMind describing a convolutional neural network Q-Learning architecture which learned to play seven different Atari games, achieving superhuman performance in three of them.</li>
 </ul>
 
-          <h1 id="agents"><a name="agents"></a>Agents</h1>
+          <h1 id="agents-code"><a name="agents"></a>Agents (Code)</h1>
 
 <p>Agents are containers for reinforcement learning algorithms. They consist of a number of different components which are specified in the <code class="prettyprint">experiment_specs</code>.</p>
 
