publish: add ac acrobot
generated from commit 000d71219492908007ae755661b54c9a5ede941e

--- a/index.html
+++ b/index.html
@@ -1199,7 +1199,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/98">-0.1045992</a></td>
 <td style="text-align: left">-</td>
 <td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/97">-0.1127294</a></td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/128">-0.1175654</a></td>
 <td style="text-align: left">-</td>
 </tr>
 <tr>
