publish: update best pendulum_ddpg_per_linearnoise
generated from commit a6b645ba701893eed175941f5105cae73a589cf6

--- a/index.html
+++ b/index.html
@@ -1227,7 +1227,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/125">-0.2984732</a></td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/130">-0.2696825</a></td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>LunarLander-v2</strong></td>
@@ -1518,10 +1518,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">Pendulum-v0</td>
-<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/125">-0.2984732</a></td>
-<td style="text-align: left">-150.8091</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/130">-0.2696825</a></td>
+<td style="text-align: left">-137.3549</td>
 <td style="text-align: left">kengz/lgraesser</td>
-<td style="text-align: left">pendulum_ddpg</td>
+<td style="text-align: left">pendulum_ddpg_per_linearnoise</td>
 </tr>
 </tbody></table>
 
