--- a/index.html
+++ b/index.html
@@ -1245,7 +1245,7 @@ When developing a new algorithm, use the session graph to immediately see how th
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left"><em>n/a</em></td>
 <td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/133">-0.03972519</a></td>
 </tr>
 <tr>
 <td style="text-align: left"><strong>BipedalWalker-v2</strong></td>
@@ -1545,10 +1545,10 @@ When developing a new algorithm, use the session graph to immediately see how th
 </tr>
 <tr>
 <td style="text-align: left">LunarLanderContinuous-v2</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
-<td style="text-align: left">-</td>
+<td style="text-align: left"><a href="https://github.com/kengz/openai_lab/pull/133">-0.03972519</a></td>
+<td style="text-align: left">503</td>
+<td style="text-align: left">kengz/lgraesser</td>
+<td style="text-align: left">lunar_cont_ddpg_linearnoise</td>
 </tr>
 <tr>
 <td style="text-align: left">BipedalWalker-v2</td>
