--- a/index.html
+++ b/index.html
@@ -209,23 +209,25 @@
 
 <p><em>OpenAI Lab</em> is created to do Reinforcement Learning (RL) like science - <em>theorize, experiment</em>. It provides an easy interface to <a href="https://gym.openai.com/">OpenAI Gym</a> and <a href="https://keras.io/">Keras</a>, with an automated experiment and evaluation framework.</p>
 
-<p>This is <a href="#motivations">motivated by the problems we faced in RL research</a>: <em>the difficulty of building upon other&rsquo;s work, the lack of rigor in comparisons of research results, and the inertia to high level vision.</em></p>
-
-<p>The Lab aims to make RL research more efficient and to encourage experimentation, by doing three things:</p>
+<h3 id="features">Features</h3>
 
 <ol>
-<li>Handles the basic RL environment and algorithm setups.</li>
-<li>Provides a standard, extensible platform with reusable components for developing deep reinforcement learning algorithms.</li>
-<li>Provides a rigorous experimentation system with logs, plots and analytics for testing new RL algorithms. Experimental settings are stored in standardized format for reproducibility and comparisons.</li>
+<li><strong>Unified RL environment and agent interface</strong> using OpenAI Gym, Tensorflow, Keras, so you can focus on developing the algorithms.</li>
+<li><strong><a href="#agents-matrix">Core RL algorithms implementations</a>, with reusable modular components</strong> for developing deep RL algorithms.</li>
+<li><strong><a href="#experiments">An experimentation framework</a></strong> for running hundreds of trials of hyperparameter optimizations, with logs, plots and analytics for testing new RL algorithms. Experimental settings are stored in standardized JSONs for reproducibility and comparisons.</li>
+<li><strong><a href="#analysis">Automated analytics of the experiments</a></strong> for evaluating the RL agents and environments, and to help pick the best solution.</li>
+<li><strong>The <a href="#fitness-matrix">Fitness Matrix</a></strong>, a table of the best scores of RL algorithms v.s. the environments; useful for research.</li>
 </ol>
 
 <p>With OpenAI Lab, we could focus on researching the essential elements of reinforcement learning such as the algorithm, policy, memory, and parameter tuning. It allows us to build agents efficiently using existing components with the implementations from research ideas. We could then test the research hypotheses systematically by running experiments.</p>
 
-<p><em>Ultimately, the Lab is a generalized framework for doing reinforcement learning, agnostic of OpenAI Gym and Keras. Pytorch-based implementations are on the roadmap, for example.</em></p>
+<p><em>Read more about the research problems the Lab addresses in <a href="#motivations">Motivations</a>. Ultimately, the Lab is a generalized framework for doing reinforcement learning, agnostic of OpenAI Gym and Keras. E.g. Pytorch-based implementations are on the roadmap.</em></p>
 
 <h3 id="implemented-algorithms">Implemented Algorithms</h3>
 
-<p>See the <strong><a href="#fitness-matrix">Fitness Matrix</a></strong> for the results of these algorithms below in the OpenAI gym environments.</p>
+<p>A list of the core RL algorithms implemented/planned.</p>
+
+<p>To see their scores against OpenAI gym environments, go to <strong><a href="#fitness-matrix">Fitness Matrix</a></strong>.</p>
 
 <table><thead>
 <tr>
@@ -2536,14 +2538,14 @@ As the Lab grows, we will add more development guide as needed.
 
 <h2 id="main-contributions"><a name="main-contributions"></a>Main Contributions</h2>
 
-<p>We see the main new contributions of the Lab as follows:</p>
+<p>We see the main new contributions/features of the Lab as follows:</p>
 
 <ol>
-<li>It is the first example of a framework to do deep RL that we know of that provides both a simple and unified interface to the OpenAI gym and neural network libraries which are necessary to implement and run RL agents, and out of the box components and algorithms. </li>
-<li>The reusability of components.</li>
-<li>Framework for running hundreds of trials searching multidimensional parameter space in just a few lines of code.</li>
-<li>Automated analytics across all of these experiments making it easier to understand what is happening quickly.</li>
-<li>The <a href="#fitness-matrix">Fitness matrix</a>.</li>
+<li><strong>Unified RL environment and agent interface</strong> using OpenAI Gym, Tensorflow, Keras, so you can focus on developing the algorithms.</li>
+<li><strong><a href="#agents-matrix">Implemented core RL algorithms</a>, with reusable modular components</strong> for developing deep RL algorithms.</li>
+<li><strong>An experimentation framework</strong> for running hundreds of trials of hyperparameter optimizations, with logs, plots and analytics for testing new RL algorithms. Experimental settings are stored in standardized JSONs for reproducibility and comparisons.</li>
+<li><strong>Automated analytics of the experiments</strong> for evaluating the RL agents and environments, and to help pick the best solution.</li>
+<li><strong>The <a href="#fitness-matrix">Fitness matrix</a></strong>, a table of the best scores of RL algorithms v.s. the environments; useful for research.</li>
 </ol>
 
 <p>1 - 4 have been covered in the sections above. Here we&rsquo;ll focus on the <a href="#fitness-matrix">Fitness matrix</a></p>
