publish: update readme
generated from commit dc3ea330a4cd3b44ee467abca11141b0e1e13ee2

--- a/index.html
+++ b/index.html
@@ -207,7 +207,7 @@
 
 <p><em>An experimentation framework for Reinforcement Learning using OpenAI Gym, Tensorflow, and Keras.</em></p>
 
-<p><em>OpenAI Lab</em> is created to do Reinforcement Learning (RL) like science - <em>theorize, experiment</em>. It provides an easy interface to <a href="https://gym.openai.com/">OpenAI Gym</a> and <a href="https://keras.io/">Keras</a>, with an automated experiment and evaluation framework.</p>
+<p><em>OpenAI Lab</em> is created to do Reinforcement Learning (RL) like science - <em>theorize, experiment</em>. It provides an easy interface to <a href="https://gym.openai.com/">OpenAI Gym</a> and <a href="https://keras.io/">Keras</a>, with an automated experimentation and evaluation framework.</p>
 
 <h3 id="features">Features</h3>
 
