--- a/index.html
+++ b/index.html
@@ -205,7 +205,7 @@
       <div class="content">
         <h1 id="openai-lab">OpenAI Lab </br> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/release/kengz/openai_lab.svg" alt="GitHub release" /></a> <a href="https://circleci.com/gh/kengz/openai_lab"><img src="https://circleci.com/gh/kengz/openai_lab.svg?style=shield" alt="CircleCI" /></a> <a href="https://www.codacy.com/app/kengzwl/openai_lab?utm_source=github.com&amp;amp;utm_medium=referral&amp;amp;utm_content=kengz/openai_lab&amp;amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/9e55f845b10b4b51b213620bfb98e4b3" alt="Codacy Badge" /></a> <a href="https://www.codacy.com/app/kengzwl/openai_lab?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=kengz/openai_lab&amp;utm_campaign=Badge_Coverage"><img src="https://api.codacy.com/project/badge/Coverage/9e55f845b10b4b51b213620bfb98e4b3" alt="Codacy Badge" /></a> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/stars/kengz/openai_lab.svg?style=social&amp;label=Star" alt="GitHub stars" /></a> <a href="https://github.com/kengz/openai_lab"><img src="https://img.shields.io/github/forks/kengz/openai_lab.svg?style=social&amp;label=Fork" alt="GitHub forks" /></a></h1>
 
-<p><em>[中文文档在这](http://kengz.me/openai</em>lab_doc_cn/)_</p>
+<p><em>中文文档在这 <a href="http://kengz.me/openai_lab_doc_cn/">Chinese translation of Lab doc</a></em></p>
 
 <p><em>An experimentation framework for Reinforcement Learning using OpenAI Gym, Tensorflow, and Keras.</em></p>
 
